# itertree

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: pytest.yml  python-package.yml  python_package_freeBSD_recommended.yml  python_package_linux_old.yml  python_package_mac_recommended.yml  python_package_mac_standard.yml  python_package_macos_standard.yml  python_package_recommended.yml  python_package_standard.yml  python_package_win_recommended.yml  python_package_win_standard.yml
build_helpers/: build_wheel.cmd  commit_to_pypi.txt  update_version.py
doc/: .buildinfo  Index_itertree.rst  conf.py
doc/_modules/itertree/: itree_main.html  itree_serialize.html
doc/_static/: documentation_options.js
docs/: Index_itertree.html  Makefile  changelog.rst  conf.py  docs.rst  genindex.html  index.rst  itertree.examples.html  itertree.html  itertree.rst  make.bat  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/.doctrees/: Index_itertree.doctree  environment.pickle  itertree.doctree  itertree.examples.doctree
docs/_modules/: index.html
docs/_modules/itertree/: itree_data.html  (+3 more)
docs/_sources/: itertree.examples.rst.txt
docs/docs/: API.rst  background.rst  changelog.rst  comparison.rst  docs.rst  examples.rst  itertree_api.rst  itertree_examples.rst  licence.rst  tutorial.rst
manualtest/: test_itertree_examples.py
src/: .gitignore
src/itertree/: __init__.py  itree_data.py  itree_filter.py  itree_filters.py  itree_getitem.py  itree_helpers.py  itree_indepth.py  itree_main.py  itree_mathsets.py  itree_private.py  itree_serialize.py
tests/: run_test.py  setup.cfg  test_itertree_base.py  test_itertree_base1.py  test_itertree_base_old.py  test_itertree_examples.py  test_itertree_flags.py  test_itertree_full_feature_trees.py  test_itertree_helpers.py  test_itertree_intervals.py  test_itertree_iter.py  test_itertree_iter2.py  test_itertree_links.py  test_itertree_mathsets.py  test_itertree_serialize.py  test_itertree_value_models.py  test_lib.py
tests/test_converter/: out.itr  out.itz  out2.itz  out_linked.itr
tests/tmp/: out.dtr  out.dtz
tests/unit/: test_itree_data.py
(+48 files in other folders)
