[metadata]
# replace with your username:
name = itertree-B_R
version = 0.4.0
author = BR1py
author_email = br1mobil@gmx.de
description = A package for creating tree structures and related data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/br1py/itertree
project_urls =
    Bug Tracker = https://github.com/br1py/itertree/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src