[metadata]
# replace with your username:
name = itertree-B_R
version = 1.1.0
author = B.R.
author_email = br_development@posteo.org
description = A package for creating tree structures and related data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BR1py/itertree
project_urls =
    Bug Tracker = https://github.com/BR1py/itertree/issues
    Documentation = https://readthedocs.org/projects/itertree/

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src